--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -56,9 +56,8 @@
             android:text="Please Upload Your Avatar"
             android:textSize="16dp"
             android:textStyle="bold"
-
             app:layout_constraintBottom_toTopOf="@+id/EnteringNameEditText"
-            app:layout_constraintHeight_percent=".07"
+            app:layout_constraintHeight_percent=".06"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profile_image"
@@ -96,6 +95,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
+            android:elevation="10dp"
             android:text="Submit"
             android:textSize="18dp"
             android:textStyle="bold"
