--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -50,9 +50,11 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/UploadingAvatarTextView"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             android:gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:text="Please Upload Your Avatar"
             android:textSize="16dp"
             android:textStyle="bold"
@@ -68,7 +70,7 @@
             android:id="@+id/EnteringNameEditText"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="35dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="35dp"
