--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,8 +11,9 @@
         android:id="@+id/customActionBar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:background="@color/colorAccent"
+        android:layout_weight="3"
+        android:background="@drawable/gradient"
+        android:paddingTop="25dp"
         android:layoutDirection="rtl"
         android:orientation="horizontal">
 
@@ -21,7 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@color/colorTrasparent"
-            android:padding="15dp"
+            android:padding="13dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_award"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@color/colorTrasparent"
-            android:padding="17dp"
+            android:padding="15dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_gear"
             app:layout_constraintBottom_toBottomOf="parent"
