--- a/app/src/main/res/layout/fragment_scores.xml
+++ b/app/src/main/res/layout/fragment_scores.xml
@@ -34,8 +34,10 @@
             android:id="@+id/Top10_Container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@drawable/gradient"
+            android:paddingTop="30dp"
             app:layout_constraintBottom_toTopOf="@id/champs_card_recycler"
-            app:layout_constraintHeight_percent=".1"
+            app:layout_constraintHeight_percent=".12"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -44,11 +46,10 @@
                 android:id="@+id/Top10TextView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="@drawable/gradient"
                 android:gravity="center"
                 android:text="Top 10"
                 android:textColor="@color/material_on_primary_emphasis_high_type"
-                android:textSize="18dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintHeight_percent=".7"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -75,7 +76,7 @@
                 android:layout_height="1dp"
                 android:layout_marginLeft="36dp"
                 android:layout_marginRight="36dp"
-                android:background="#461224"
+                android:background="#F3D7DD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
